fixed image overflow problem and other issues

--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ button{
   max-width: calc(1440px - 2 * var(--inner-inline-margin));
   padding: 0 var(--inner-inline-margin);
   position: relative;
-  overflow-x: hidden;
   z-index: 0;
+  overflow: hidden;
+
 }
 .bg {
   position: absolute;
@@ -121,7 +122,9 @@ main {
   background-color: transparent;
   display: flex;
   flex-direction: column-reverse;
-  row-gap: 75px;
+  row-gap: clamp(50px, 65px + 1vw, 75px);
+
+
 }
 main .hero {
   min-height: calc(100vh - var(--header-height));
@@ -130,9 +133,10 @@ main .hero {
 
 main .img-container .hero-img {
   position: relative;
-  left: -23px;
+  right: 23px;
   top: -5px;
   height: var(--img-height);
+
 }
 main .hero .new {
   display: flex;
@@ -158,7 +162,6 @@ main .hero .new span {
 }
 main .hero h1 {
   text-transform: uppercase;
-  max-width: 17ch;
   font-size: var(--fs-700);
   margin-block: 1rem 1.1rem;
   line-height: 100%;
@@ -172,12 +175,12 @@ main .hero .details {
   line-height: 113%;
   color: var(--Very-Dark-Blue);
 }
-main .hero .demo {
+main .hero .cta {
   display: flex;
   align-items: center;
   column-gap: 1.25rem;
 }
-main .hero .demo button {
+main .hero .cta button {
   cursor: pointer;
   padding-inline: 23px;
   padding-block: 14px 12px;
@@ -190,10 +193,10 @@ main .hero .demo button {
   font-weight: 700;
   text-transform: uppercase;
 }
-main .hero .demo button:hover{
+main .hero .cta button:hover{
   opacity: .75;
 }
-main .hero .demo p {
+main .hero .cta p {
   margin-block: 0;
   text-transform: uppercase;
   letter-spacing: 2.5px;
@@ -208,17 +211,14 @@ main .hero .demo p {
     --inner-inline-margin: 15px;
     --img-height: 205px;
   }
-  main .hero {
-    min-width: 290px;
+  main .hero{
+    min-width: revert;
   }
   main .hero h1 {
     font-size: 2.125rem;
   }
-  main .hero .demo {
-    gap: 0.75rem;
-  }
-  main .hero .demo button {
-    padding-inline: 16px;
+  main .hero .cta button {
+    padding-inline: 12px;
   }
 }
 @media screen and (min-width: 440px) {
@@ -226,26 +226,17 @@ main .hero .demo p {
     --inner-inline-margin: 48px;
     --img-height: 285px;
   }
-  main {
-    row-gap: 65px;
-  }
 }
 @media screen and (min-width: 540px) {
   :root {
     --inner-inline-margin: 64px;
     --img-height: 335px;
   }
-  main {
-    row-gap: 57.5px;
-  }
 }
 @media screen and (min-width: 640px) {
   :root {
     --inner-inline-margin: 80px;
     --img-height: 375px;
-  }
-  main {
-    row-gap: 50px;
   }
 }
 @media screen and (min-width: 720px) {
@@ -257,14 +248,12 @@ main .hero .demo p {
   .header {
     margin-bottom: 94px;
   }
-  
   main {
     flex-direction: revert;
   }
   main .img-container .hero-img {
     left: revert;
     right: -65px;
-    
   }
 }
 @media screen and (min-width: 900px) {
@@ -299,17 +288,14 @@ main .hero .demo p {
   }
 }
 @media screen and (min-width: 1400px) {
-  .wrapper {
-    margin: auto;
-  }
   :root {
     --inner-inline-margin: 164px;
   }
   main .hero{
     min-width: 480px;
   }
-
   main .hero h1 {
+    max-width: 17ch;
     margin-bottom: 32px;
   }
   main .img-container .hero-img {
@@ -320,33 +306,22 @@ main .hero .demo p {
   main .hero .details{
     margin-block: 0.25rem 4.375rem;
   }
-  main .hero .demo {
+  main .hero .cta {
     gap: 26px;
   }
-  main .hero .demo button{
+  main .hero .cta button{
     padding-inline: 33px;
     padding-block: 17px 15px;
     font-size: 14px;
   }
-  main .hero .demo p {
+  main .hero .cta p {
     letter-spacing: 5px;
   }
 }
 @media screen and (min-width: 1441px) {
   .wrapper{
-    padding: 0 calc(var(--inner-inline-margin) + 5.5vw);
+    --max-width: calc(1440px - 2 * var(--inner-inline-margin));
+    padding: 0 calc((100vw - var(--max-width)) / 2);
   }
-  .header .nav{
-    position: relative;
-    right: -3vw;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .wrapper{
-    padding: 0 calc(var(--inner-inline-margin) + 11vw);
-  } 
-
-
-
 }
 
